Bug 340443 - Not possible to use the XPCOM glue with the static CRT, r=neil sr=darin