xpcom/glue/nsGenericFactory.cpp
@@ -390,7 +390,7 @@ nsGenericModule::RegisterSelf(nsIComponentManager *aCompMgr,
     nsresult rv = NS_OK;
 
 #ifdef DEBUG
-    fprintf(stderr, "*** Registering %s components (all right -- a generic module!)\n", mModuleName);
+    printf_stderr("*** Registering %s components (all right -- a generic module!)\n", mModuleName);
 #endif
 
     const nsModuleComponentInfo* cp = mComponents;
@@ -407,7 +407,7 @@ nsGenericModule::RegisterSelf(nsIComponentManager *aCompMgr,
                                                         componentType);
             if (NS_FAILED(rv)) {
 #ifdef DEBUG
-                fprintf(stderr, "nsGenericModule %s: unable to register %s component => %x\n",
+                printf_stderr("nsGenericModule %s: unable to register %s component => %x\n",
                        mModuleName?mModuleName:"(null)", cp->mDescription?cp->mDescription:"(null)", rv);
 #endif
                 break;
@@ -420,7 +420,7 @@ nsGenericModule::RegisterSelf(nsIComponentManager *aCompMgr,
                                        componentType, cp);
             if (NS_FAILED(rv)) {
 #ifdef DEBUG
-                fprintf(stderr, "nsGenericModule %s: Register hook for %s component returned error => %x\n",
+                printf_stderr("nsGenericModule %s: Register hook for %s component returned error => %x\n",
                        mModuleName?mModuleName:"(null)", cp->mDescription?cp->mDescription:"(null)", rv);
 #endif
                 break;
@@ -438,7 +438,7 @@ nsGenericModule::UnregisterSelf(nsIComponentManager* aCompMgr,
                             const char* registryLocation)
 {
 #ifdef DEBUG
-    fprintf(stderr, "*** Unregistering %s components (all right -- a generic module!)\n", mModuleName);
+    printf_stderr("*** Unregistering %s components (all right -- a generic module!)\n", mModuleName);
 #endif
     const nsModuleComponentInfo* cp = mComponents;
     for (PRUint32 i = 0; i < mComponentCount; i++) {
@@ -455,7 +455,7 @@ nsGenericModule::UnregisterSelf(nsIComponentManager* aCompMgr,
              rv = registrar->UnregisterFactoryLocation(cp->mCID, aPath);
         if (NS_FAILED(rv)) {
 #ifdef DEBUG
-            fprintf(stderr, "nsGenericModule %s: unable to unregister %s component => %x\n",
+            printf_stderr("nsGenericModule %s: unable to unregister %s component => %x\n",
                    mModuleName, cp->mDescription, rv);
 #endif
         }
